<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eventisardegna.shardana.eventisardinia.LoginActivity">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_utente"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_margin="15dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonSignIn"
            android:text="@string/accedi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView

            android:textAlignment="center"
            android:text="@string/non_ti_sei_registrato_premi_qui"
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonAdmin"
            android:text="@string/accedi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>



</android.support.constraint.ConstraintLayout>
